# oxcaml

./: .gitattributes  .gitignore  AGENTS.md  FINDINGS.md  Makefile  Makefile.common-ox  Makefile.upstream  OXCAML_EH_PROGRESS.md  configure.ac  dune  jkind-solver.tex  llvm-backend-correctness-areas.md  llvm-backend-plan.md  llvm-backend-progress.md  llvm-backend.md  llvm-expect-test-design.md  run_tests.sh
_bench_llvm_slow_cases_current/: summary_after_stack_pair_boundary_focused_20260527_033657.json  summary_design1_current_20260527_030636.json
asmcomp/: asmgen.ml  cm_bundle.ml
backend/: afl_instrument.ml  cfg_selectgen.ml  cmm.ml  cmm.mli  cmm_helpers.ml  cmm_helpers.mli  printcmm.ml  select_utils.ml  zero_alloc_checker.ml
driver/: compenv.ml  main_args.ml  main_args.mli  oxcaml_args.ml  oxcaml_args.mli
duneconf/: dune
experiments/: A.ml  arrow_in_tuple.ml  arrow_kinds.ml  deep_lists.ml  degenerate_variant.ml  my_list_recursive.ml  nested_with_bounds.ml  record_mutability.ml  record_recursive_boxed.ml  run_all.sh  tuple_boxed.ml  unboxed_record_recursive.ml  variant_mixed.ml  variant_recursive_lists.ml
ocamltest/: builtin_actions.ml  ocaml_actions.ml
runtime/: amd64.S  arm64.S  domain.c  fiber.c  gc_ctrl.c  llvm_personality.c  main.c  major_gc.c  memory.c  minor_gc.c  obj.c  shared_heap.c  startup_aux.c  str.c
runtime4/: Makefile
testsuite/: Makefile
tools/: build-clean-native-install.sh  build-llvm-boot-with-installed.sh  build-llvm-self-stage-install.sh  build-llvm-stage5-install.sh  llvm-backend-defaults.sh  run-llvm-stage5-ocamltest.sh  (+3 more)
(+667 files in other folders)
