; Our system compiler doesn't have CamlInternalQuote in its stdlib, so
; we need to compile it as an additional target, but only for the first
; stage build.
;
; These rules cannot be in the root "dune" file, as this causes dune to
; report a circular dependency.

(rule
 (targets camlinternalquote_if_missing_from_stdlib)
 (enabled_if
  (= %{context_name} "default"))
 ; Use runtime detection to also support the case where the system compiler
 ; *does* have camlinternalQuote in its stdlib (e.g. the system compiler is
 ; oxcaml).
 (action
  (with-stdout-to %{targets}
   (bash "
     tmp_ml=camlinternalquote_check.ml
     tmp_cmi=camlinternalquote_check.cmi
     tmp_cmo=camlinternalquote_check.cmo
     trap 'rm -f \"$tmp_ml\" \"$tmp_cmi\" \"$tmp_cmo\"' EXIT
     printf 'open CamlinternalQuote\n' > \"$tmp_ml\"
     if ocamlc -c \"$tmp_ml\" 2>/dev/null
     then echo '()'
     else echo 'camlinternalQuote'
     fi
   "))))

(rule
 (targets camlinternalquote_if_missing_from_stdlib)
 (enabled_if
  (not
   (= %{context_name} "default")))
 (action
  (write-file %{targets} "()")))
